Changed position back to absolute on style.css. Fixed login and mission page to have container scrollbar instead of strecthing to fit page.

--- a/public/style/signupStyle.css
+++ b/public/style/signupStyle.css
@@ -1,5 +1,6 @@
 .signup{
-	height:120%;
+	/*height:120%;*/
+	overflow-x:hidden;
 }
 
 .signup-form .main-content {
